RESOLVED FIXED278645
REGRESSION (276633@main): "grid-row: auto" collapses for child with hidden overflow
https://bugs.webkit.org/show_bug.cgi?id=278645
Summary REGRESSION (276633@main): "grid-row: auto" collapses for child with hidden ov...
Alex
Reported 2024-08-26 02:44:12 PDT
REGRESSION Steps to reproduce: 1. Go to https://codepen.io/gmltA/full/NWZMBPy Expected result: A `footer` element with green background and text 'data' is visible at the bottom of the screen. Actual result: A `footer` is not visible at all. Works as epxected on: MacBook (Apple Silicon): Chrome, Firefox, Safari 17.4 Android: Chrome Fails on: Desktop: Safari 18, Safari TP (v201). Mobile: Safari 17.5 P.S. The CSS is a bit wierd because I was trying to imitate the exact properties order from my production environment.
Attachments
simplified testcase (1.23 KB, text/html)
2024-09-04 00:10 PDT, Karl Dubost
no flags
rendering in safari, firefox, chrome (100.43 KB, image/png)
2024-09-04 00:11 PDT, Karl Dubost
no flags
Radar WebKit Bug Importer
Comment 1 2024-09-02 02:45:14 PDT
Karl Dubost
Comment 2 2024-09-04 00:10:30 PDT
Created attachment 472440 [details] simplified testcase I tried to reduce a bit more the testcase.
Karl Dubost
Comment 3 2024-09-04 00:11:57 PDT
Created attachment 472441 [details] rendering in safari, firefox, chrome Tested on Safari Technology Preview 202 20620.1.2 Firefox Nightly 131.0a1 13124.8.23 Google Chrome Canary 130.0.6680.0 6680.0
Karl Dubost
Comment 4 2024-09-04 00:13:58 PDT
Alex, Thanks a lot for the bug. Do you have this issue on a real website you are developing?
Alex
Comment 5 2024-09-04 01:22:31 PDT
Karl, unfortunately yes. As I discovered the bug I couldn't believe I didn't test it properly. Only after some research I understood that this is a regression. Do you need a link? I think the bug will be there not for long as I am about to release a workaround for it.
Karl Dubost
Comment 6 2024-09-04 01:48:55 PDT
yes it usually helps raise the priority, even if you are working around it.
Sammy Gill
Comment 8 2024-09-06 18:05:12 PDT
Sammy Gill
Comment 9 2024-09-12 14:01:56 PDT
After looking at the failing test cases I believe this change is not right and I need to take a look at the test case again. I think we are currently computing the minimum contribution of the grid item correctly as the spec defines it as: "The minimum contribution of an item is the smallest outer size it can have. Specifically, if the item’s computed preferred size behaves as auto or depends on the size of its containing block in the relevant axis, its minimum contribution is the outer size that would result from assuming the item’s used minimum size as its preferred size" - The grid item's width behaves as auto - The grid item's min-width property is auto so we fallback to grid's automatic minimum sizes for grid items. - The grid item has overflow: hidden making it a scroll container and as a result causes the automatic minimum size compute to 0.
EWS
Comment 10 2024-11-04 14:59:30 PST
Committed 286122@main (a3f64e9fd109): <https://commits.webkit.org/286122@main> Reviewed commits have been landed. Closing PR #33272 and removing active labels.
Sammy Gill
Comment 11 2024-11-04 15:59:25 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/48962
EWS
Comment 12 2024-11-07 19:05:46 PST
Committed 283286.458@safari-7620-branch (1d0ee529a7ea): <https://commits.webkit.org/283286.458@safari-7620-branch> Reviewed commits have been landed. Closing PR #2245 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.